--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.4",
     "mongoose": "^4.8.6",
     "pm2": "^2.4.2",
+    "redis": "^2.7.1",
     "request": "^2.80.0",
     "valid-url": "^1.0.9"
   },
